# btdp-lloyd

./: .component_name  README.md  docker-compose.yml
.buildkite/: pipeline.deploy.yml  pipeline.yml
clock-worker/: ExampleNotebook.py  ai.py  main.py  pyproject.toml  test.sh  test_adder.py  test_ai.py
clock-worker/doers/: adder.py
infra/: .gitignore  config.tf  sand.tfvars  storage.tf
