[tool.jupytext]
formats = "ipynb,py:percent"

[tool.poetry]
name = "clock-worker"
version = "1.0.0-alpha"
description = "Scaffolding for a python project using jupyter in a git-friendly way."
authors = ["WayBeyond Team"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.4.1"
pip-audit = "^2.0.0"
moment = "^0.12.1"

[tool.poetry.dev-dependencies]
appnope = "^0.1.2"
openpyxl = "^3.0.9"
pexpect = "^4.8.0"
jupyter = "^1.0.0"
jupytext = "^1.13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
